src/test/ui/issues/issue-11515.stderr
error[E0658]: trait upcasting coercion is experimental
  --> $DIR/issue-11515.rs:9:33
   |
LL |     let test = box Test { func: closure };
   |                                 ^^^^^^^
   |
   = note: see issue #65991 <https://github.com/rust-lang/rust/issues/65991> for more information
   = help: add `#![feature(trait_upcasting)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
